tests/errors/lex_octal.java
public class lex_octal {
	int a = 0007;
}
